--- a/samples-and-tests/flowcontrol-notifier-demo/conf/application.conf
+++ b/samples-and-tests/flowcontrol-notifier-demo/conf/application.conf
@@ -215,5 +215,5 @@ mail.smtp=mock
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
-flowcontrol.apikey=ca110f8e-999e-481b-afdf-161de9e62130
-flowcontrol.url=http://localhost:9090/notifier_api/v2/notices
+flowcontrol.apikey=07f69385-d2b5-467c-b682-8fcf8e9bdc86
+flowcontrol.url=https://phl.innoq.com/flowcontrol/notifier_api/v2/notices
